--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,12 @@ header{
 
     margin-right: 14px;
 }
-
+.persons_cre{
+    display: none;
+}
+.persons_act{
+    display: none;
+}
 .pers_active{
     display: flex;
     flex-wrap: wrap;
@@ -179,9 +184,7 @@ header{
     margin-right: -15px;
     margin-left: -15px;
 }
-.persons_cre{
-    display: none;
-}
+
 /* .persons_act{
     display: flex;
     flex-wrap: wrap;
@@ -228,11 +231,15 @@ header{
 .actors{
     font-weight: 900;
     font-size: 24px;
+    color: #A5A5A5;
 }
 .creators{
     font-weight: 900;
     font-size: 24px; 
     color: #A5A5A5;
+}
+.btn_per_active{
+    color: white;
 }
 
 .news{
@@ -384,8 +391,5 @@ header{
         font-size: 20px;
         margin-top: 40px;
         margin-bottom: 40px;
-    }
-    .people{
-
     }
 }
