--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,12 @@ header{
     color: white;
 
 }
+.container .burger{
+    display: none;
+}
+.container .burger-menu{
+    display: none;
+}
 .poster{
     flex-shrink: 1;
 }
@@ -301,6 +307,9 @@ header{
     .news_column:not(:first-child){
         display: none;
     }
+    .link{
+        font-size: 14px;
+    }
     .film{
         display: flex;
         flex-direction: column;
@@ -309,6 +318,49 @@ header{
     }
     .header{
         padding-left: 20px;
+        padding-right: 20px;
+    }
+    .material-icons-outlined{
+        align-items: end;
+    }
+    .container .burger{
+        cursor: pointer;
+    }
+    .burger-menu-heder{
+        width: 100%;
+        height: 30px;
+        background: white;
+        display: flex;
+    }
+    .burger-menu-text{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .container .burger-menu{
+        width: 100%;
+        height: 603px;
+    }
+
+    .container .burger{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .container .line{
+        border: white solid 2px;
+        width: 20px;
+        /* height: 2px; */
+        border-radius: 40px;
+        margin-bottom: 4px;
+    }
+    .text-menu{
+        color: white;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .text-menu .border{
+        border: 1px solid #D4D4D4;
+        width: 104px;
     }
     .poster{
         display: flex;
@@ -391,5 +443,25 @@ header{
         font-size: 20px;
         margin-top: 40px;
         margin-bottom: 40px;
+    }
+    .burger-menu.active{
+        display: flex;
+        height: 10px;
+    }
+    .burger-menu.close-burger-menu{
+        display: none;
+    }
+    .image.close-logo{
+        display: none;
+    }
+    .image.active-logo{
+        display: block;
+    }
+    .burger.close-burger{
+        display: none;
+    }
+    .burger.active-burger{
+        display: flex;
+        
     }
 }
