--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,11 @@ header{
         display: none;
     }
     .link{
-        font-size: 14px;
+        font-size: 24px;
+        color: black;
+        margin-bottom: 50px;
+        margin-left: 0px;
+        border-bottom: 2px solid black;
     }
     .film{
         display: flex;
@@ -327,15 +331,28 @@ header{
         cursor: pointer;
     }
     .burger-menu-heder{
-        width: 100%;
+        width: 200px;
         height: 30px;
         background: white;
         display: flex;
+        justify-content: center;
+        order: 9999;
+    }
+    .close_menu{
+        font-size: 24px;
     }
     .burger-menu-text{
         display: flex;
         align-items: center;
+        justify-content: center;
+        order: 998;
         flex-direction: column;
+        position: fixed;
+        right: 0px;
+        width: 100%;
+        height: 300px;
+        color: black;
+        background-color: white;
     }
     .container .burger-menu{
         width: 100%;
